test_case/rust-lang_rust/14285_43471463.rs
 rust
// error: cannot infer an appropriate lifetime
fn foo<'a>(a: &Foo) -> B<'a> { B(a) }
